Fixed loading spinner not centered

--- a/src/styles/_dialog.scss
+++ b/src/styles/_dialog.scss
@@ -32,7 +32,6 @@
     content-padding: 24px,
     headline-padding: 24px,
     actions-padding: 0 0 24px 0,
-    actions-alignment: center,
     container-max-width: 700px
   ));
 }
